Spring Boot 3.0.1, DGS 6.0.0, DGS Codegen 5.6.5, various compiler and deprecation warning fixes