@@ -26,7 +26,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -48,7 +47,7 @@ public class PluginValidator {
 
         List<PluginCoordinates> registeredPluginCoordinates = pluginRepository.findAll().stream()
                 .map(Plugin::getPluginCoordinates)
-                .collect(Collectors.toList());
+                .toList();
 
         dependencies.forEach(dependency -> {
             Optional<PluginCoordinates> registeredMatchIgnoringVersion = registeredPluginCoordinates.stream()
